# file-categorizer

./: CROSS_PLATFORM_COMPATIBILITY.md  File Categorizer.bat  File Categorizer.ps1  MANIFEST.in  README.md  debug_scan.py  pyproject.toml  setup.py  test_platform_compatibility.py  test_scan_endpoint.py  test_sse.py  test_ui_feedback.py  test_web_endpoints.py
.kiro/specs/file-categorizer/: design.md  requirements.md  tasks.md
file_categorizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  __main__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config.py  database.py  error_handler.py  exceptions.py  logging_config.py  models.py  scanner.py
src/web/: __init__.py  app.py
src/web/blueprints/: __init__.py  api.py  main.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: base.html  cleanup.html  index.html  scan.html  search.html
src/web/templates/errors/: 404.html  500.html  database_error.html
tests/: __init__.py  test_cross_platform.py
